fix bottom links going behind automator

--- a/public/stylesheets/automator.css
+++ b/public/stylesheets/automator.css
@@ -3,7 +3,7 @@
 }
 
 .c-automator-tab {
-  height: 50rem;
+  height: 57rem;
   width: 100rem;
 }
 
